[package]
name = "mkaudiolibrary"
description = "Modular audio processing library including MKAU plugin format based on Rust."
license = "MIT"
version = "2.1.0"
edition = "2024"
documentation = "https://docs.rs/mkaudiolibrary"
readme = "README.md"
homepage = "https://github.com/mkaudio-company/mkaudiolibrary"
repository = "https://github.com/mkaudio-company/mkaudiolibrary"
keywords = ["audio", "signal-processing"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
realtime = ["dep:coreaudio-sys", "dep:windows", "dep:alsa"]
simd = []
midi = ["mkmidilibrary"]
gui = ["dep:mkapk-core", "dep:mkapk-host"]
vst3 = ["dep:coreaudio-sys"]
au = ["dep:coreaudio-sys"]
# Analog circuit simulation (tubes, diodes, transistors, WDF networks),
sim = []
# f32 SIMD backends for `sim`'s internal math (independent of the `simd` feature above).
sim-avx2 = ["sim"]
sim-avx512 = ["sim"]
sim-neon = ["sim"]

[dependencies]
libloading = "0.9"
no_denormals = "0.3"
mkmidilibrary = { version = "0.2", optional = true }
# Plugin-GUI framework (widget tree, geometry, paint commands, and the
# PluginEditor/EditorHost parent-window-embedding traits) - a better fit
# than a general-purpose windowing crate since it's built for hosted
# plugin editors (VST3/AU/MKAP), not standalone application windows.
mkapk-core = { version = "0.1", optional = true }
mkapk-host = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = { version = "0.2.18", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_Devices_Properties",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Security",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Pinned to match the `alsa` version mkmidilibrary (an optional dependency
# via the `midi` feature) requires; alsa-sys uses a native `links` key, so
# only one version can appear in the whole dependency graph at once.
alsa = { version = "0.9", optional = true }